adding demon notes

--- a/data/Aldinach.wiki
+++ b/data/Aldinach.wiki
@@ -3,3 +3,10 @@
 layer of the [Abyss] - [Pazunia]
 
 Aldinach, Lady of Change, is a demon lord. Aldinach is a reclusive demon princess who delights in the perversion of the pure and innocent. She appears as a lithe humanoid woman with her face covered by an alabaster mask, and with polished mahogany skin and long fingers that end in needles. She uses these needles to inject putrid sap into her victims in order to mutate their bodies for her personal amusement.Aldinach lives on the layer of Pazunia, from the fortress of Aldinach's Egg by the edge of the Grand Abyss.
+
+resides in [Aldinachs Egg]
+
+can summon Mariliths (pg 61 of monster manual)
+
+True form is a Succubus (pg 285)
+-but can transform into https://www.dandwiki.com/wiki/Archespore_(5e_Creature)
