--- a/data/Evil Group Notes.wiki
+++ b/data/Evil Group Notes.wiki
@@ -1075,10 +1075,10 @@ Teleport back to the cave to the Material Plane
           -avoid mohoganny vessels
           -given crude but accurate map of where to go
           
-          
         -[Croaker] plane shifts to [Shadowfell] with Murray and [Thia] for his "other tasks" 
           -obtains black steel rapier in [Evernight] 260g
           -asks about the whereabouts of [Velsharoon]
           -becomes followed by a Skulk
            
+++++Session 62
         
