--- a/data/Group Three Notes.wiki
+++ b/data/Group Three Notes.wiki
@@ -823,4 +823,6 @@ Vin tracks down [Letho] and ask him to join for the attack on [Arabasta]
         -that she's a moon elf and have information about their friend, a dwarf who was suffering from some sort of mania
       -[Kyra] and [Jit] talk about [Thia Siannodel] who broke into the room and told about [Tessa]  
         
+++++Session 34
+      Beginning Weenie: [Tessa]'s Inquisition, After being locked up at [House Salazar] for an hour, allowing a short rest, two Inquisitors will enter the chamber, take [Tessa]'s belongings, and quickly find her ties to magic, and destroy [Tessa]'s Book of Shadows, prompting the Inquisitors to then gag and bind Tessa's hands uncomfortably tight with many thick layers of cloth that make her hands unusable. The remainder of her belongings are taken to [The God Kings Palace]'s Dungeon to be destroyed or investigated for information.       
       
