adding group three notes

--- a/data/Etherium, The Most Malleable Metal.wiki
+++ b/data/Etherium, The Most Malleable Metal.wiki
@@ -1,4 +1,5 @@
 ﻿++ Etherium, The Most Malleable Metal
+DWARVISH
 
 Etherium might possibly the most wonderous of all the metals in this world. Most metals conduct heat and thus are made malleable to work with, etherium seems to constantly be in this soft state, making it the easiest to form. However, that is not what is most impressive about this material. It's properties allow it to conduct magic! In my times as an enchanting smith, I had wished I had come accross this material earlier in my career, back when it would have been more useful. The enchantments that I place upon it become stronger and hold better, and the green luster of the metal begins to glow when I do so. 
 
