--- a/data/Group Three Notes.wiki
+++ b/data/Group Three Notes.wiki
@@ -826,3 +826,9 @@ Vin tracks down [Letho] and ask him to join for the attack on [Arabasta]
 ++++Session 34
       Beginning Weenie: [Tessa]'s Inquisition, After being locked up at [House Salazar] for an hour, allowing a short rest, two Inquisitors will enter the chamber, take [Tessa]'s belongings, and quickly find her ties to magic, and destroy [Tessa]'s Book of Shadows, prompting the Inquisitors to then gag and bind Tessa's hands uncomfortably tight with many thick layers of cloth that make her hands unusable. The remainder of her belongings are taken to [The God Kings Palace]'s Dungeon to be destroyed or investigated for information.       
       
+      The group attacks [House Salazar]
+      The group frees the gnome Gildinorb from the dungeon at [House Salazar]
+      EXP 7700
+      nat 20 result for Thia investigation in the House Salazar Armour room to resolve
+      
+      
