adding group three notes

--- a/data/Group Three Notes.wiki
+++ b/data/Group Three Notes.wiki
@@ -828,7 +828,17 @@ Vin tracks down [Letho] and ask him to join for the attack on [Arabasta]
       
       The group attacks [House Salazar]
       The group frees the gnome Gildinorb from the dungeon at [House Salazar]
-      EXP 7700
-      nat 20 result for Thia investigation in the House Salazar Armour room to resolve
+      nat 20 result for [Thia Siannodel] investigation in the House Salazar Armour room to resolve
       
+++++Session 35
+    Ball happening 4 days from now, that [Doot] has been allowed to perform at.        
+    
+    The group finishes killing everyone at [House Salazar]
+      -including lord salazar
+      
+    [Thia Siannodel] begins following the group more conspicuously.
+    [Doot] advertised with a poster at the stage in the central square
+    
+    The group heads back to the boat for a long rest
+    
       
