adding abyss content

--- a/data/Abyss.wiki
+++ b/data/Abyss.wiki
@@ -8,3 +8,8 @@ Plantlife:
   
  1st layer: [Pazunia] 
  17th layer: [Pleroma]
+ 71st layer: [Spirac]
+ 88th layer: [Gaping Maw]
+ 89th layer: [Shadowsea]
+ 570th layer: [Shendilavri]
+ 663rd layer: [Zionyn]
