--- a/data/Pazunia.wiki
+++ b/data/Pazunia.wiki
@@ -23,6 +23,6 @@ great iron strongholds
   
   Pit to [Hollows Heart]
   Pit to [Spirac]
-  Pit to [Zionym]
+  Pit to [Zionyn]
   Pit to [Gaping Maw]
   Pit to [Shendilavri]
