--- a/data/Tessa.wiki
+++ b/data/Tessa.wiki
@@ -5,3 +5,5 @@ dwarven warlock player controlled by TJ
 Wolf [AkumaFruits]
 
 has a marine private badge issued to Bersk
+
+Tessa's patrons unicorn name is [Sarette] 
