--- a/data/Group Three Notes.wiki
+++ b/data/Group Three Notes.wiki
@@ -17,7 +17,7 @@ XXXXXXX  XXXXXXX
 XXXXXXX  XXXXXXX
 XXXXXXX  XXXXXXX
 
-XXXXXXX  XX
+XXXXXXX  XXX
 XXXXX(August 7th)XX
 XXXXXXX
 XXXXXXX
@@ -856,9 +856,10 @@ Vin tracks down [Letho] and ask him to join for the attack on [Arabasta]
     -[Tessa] retreives items from [Venril Sathir]s, most are destroyed but the [Stone of Kord] and Dimeritium orb are in good shape
     
     The group attempts to travel to the volcano, but after [Tessa] communes with [Sarette], the group choses not to.
+    -Group rested on the ship
 
 ++++ Session 37
-    Weenie: The [House Stayanoga] ball in (4 days) XXX
+    Weenie: The [House Stayanoga] ball in (4 days) XXXX
         -attended by [House Zolis], [House Stayanoga], [House Zasheir]
            all respective lords are present
         -There are 4 members of the [Order of Steel] present
@@ -874,3 +875,17 @@ Vin tracks down [Letho] and ask him to join for the attack on [Arabasta]
             "Welcome to this wonderous occasion! I hope you all have been enjoying yourself. I Lord Stayanoga would like to take a moment before opening out buffet to thank The Grand [Luthadel] Orchestra for providing music for tonight. Also to [Head Bishop Skarjun] for both your precense and added security to ensure everyone feels safe. I know you have all have probably heard about Lord Salazar by now. I offer my condolences to his family, and to his staff who have worked so hard to keep [Luthadel] safe. Also, before we eat, a word from [Head Bishop Skarjun]."
           Closing words from [Head Bishop Skarjun]:
             "Whenever we have reached out lowest lows, always remember, that our one and only God King [Venril Sathir] is there for us. He has been there for us. Our parents. Their parents. And many generations of the past and yet to come. These miscreants who think they should wield magic, what comes of it but the death and misery of those around them? Magic is a force that no one can understand but our one and only God King [Venril Sathir]. Brothers at the [Order of Steel] and our inquisitors will not rest until all mages come to justice. All praise our one and only God King [Venril Sathir]." 
+            
+    [Thia] meets with [Callistege]
+      -[Matkina] can be found by [House Zashier] at midnight tonight 
+      -100g and 5 days to craft sending stones
+      -offer instructions
+      
+    THE BALL
+    [Doot] does his gig and is paid a platinum
+    [Plosive] dances with a son of [House Zolis]  
+    [Kyra] rummages through some of the rooms and acquires some books
+    [Tessa] distrupts the event with a blast of phsycic damage, causing screams 
+    
+    
+        
