--- a/data/Tiamat.wiki
+++ b/data/Tiamat.wiki
@@ -9,9 +9,15 @@ Symbol: Five-pointed star with curved points
 
 Dragons were banished from the world by fusing them into one, and buried deep below Gorda. This is where Tiamat resides.
 
+Emperion:
 https://ii.yuki.la/e/d5/cb25ff3123d78f35f2bb62e9b866fc33338a6a5ece06c84d6e585e8682111d5e.png
 (or see local saved image for stats)
+
+True Form:
+http://www.enworld.org/forum/showthread.php?468639-5e-EPIC-MONSTER-UPDATES
 
 When Released:
     -by destroying the elvish mummies and waking her from her sleep.
         -destructively leaves it's cave where it is sealed to pursue [Bahamut] and all who would worship or live to promote him.
+        
+        
