--- a/data/Evil Group Notes.wiki
+++ b/data/Evil Group Notes.wiki
@@ -1141,7 +1141,7 @@ Teleport back to the cave to the Material Plane
     
     [Smoke] after communing once with [Yygrool], he has stolen the taxidermy from the group and is contemplating letting the ancient troll loose in exchange for the power it offers. Has been staying at a room in the [3 Helms Deep] inn/bar
      
-    [Grogar] tests his reaction to salt water again, and it knocked unconcious.
+    [Grogar] tests his reaction to salt water again, and is knocked unconcious.
     
     The group long rests upon the ship
     -waits a day for the next night to sneak onto the 2 iksar vessels
