--- a/data/Tana.wiki
+++ b/data/Tana.wiki
@@ -1,3 +1,5 @@
 ﻿++ Tana
 
 100 yrs old, single
+
+Relatively new to the guard force, and is looking forward to establishing herself as a respectable member.
