--- a/data/Towns.wiki
+++ b/data/Towns.wiki
@@ -3,6 +3,7 @@
 [Augsburg] (starter town)
 [Marine HQ] also a large prison on top of a Dimeritium mine
 [Fiore] 
+  - Mayara, [3 Helms Deep]
 [Elbaf]  (one piece land of giants) 
 [Alexandria]  (huge trade center, library)
 [Arabasta]
