--- a/data/Zana.wiki
+++ b/data/Zana.wiki
@@ -1,3 +1,6 @@
 ﻿++ Zana
 
 has a husband and child
+
+Husband Jort, who works as a day trader, transporting goods from place to place around [Ak'anon]
+Child Jortanagild, who is adolescent and entertains herself with her friends around town.
