--- a/data/3 Helms Deep.wiki
+++ b/data/3 Helms Deep.wiki
@@ -1,7 +1,4 @@
 ﻿++ 3 Helms Deep
-
-Weeny:
-    Old man Muu is back, and has been non-stop harvesting the new fruits and burning them in large piles outside of town, complaints from towns people about foul smelling smoke.
     
     Deformed populace via [AkumaFruits], including:
       (2)-Speech- Trebble, Gnome M
@@ -9,12 +6,13 @@ Weeny:
       (4)-Headless- Chip, Human M, frequents the Tavern
       (8)-Dry- Torrid, Human M, also frequenting the Tavern, ordering an abundant number of drinks, or in the market begging for drink money
       (12)-You Are What You Eat- Durk, who used to be an ogre over a thousand years ago, now in the human body of Brian, and very confused
+      (16)-Periferal Invisibility- Rosie, a child who is shy
+      (17)-Reverse Digestion- [Ruvyn], A very ashamed elf who has been helping keep get by in the food shortage in a down-low type of way. Has people drop their buckets of feces at his door, that he consumes in privacy. 
 
-Population: 149
 Taxes: 240g/month (low) 480g/month (med) 960g/month (high)
     -population x2 for low, then x2 that for each higher bracket
 Marine Upkeep: 840g/month   -500G subsidy for Marine Upkeep to offer med taxes
-Trade Routes: None   
+Trade Routes: [Ak'anon], [Marine HQ], [Gorda]   
 Treasury: 2527
          -1680 (2 months)
           +960 (2 months)
@@ -26,26 +24,29 @@ Treasury: 2527
 -Statue of [Regdar] at the top of the stairs to the noble quarter.
 -Husk of [Kadi] setup at the center of town where the statue of Regdar was.
 
-Mayor Ubring instructions
--recruit more citizens, and offer them a halved tax rate for thier first year here
+++Government
+  A council consisting of
+  [Mayor Ubring], [Royal Armoror Grix], [Krieger], Head of Agriculture [Nohkus]
+    - Mayor Ubring is to recruit more citizens, and offer them a halved tax rate for thier first year here
 
-Formerly known as Mayara, the Bandits of Deception slew the [King Jor Doken] and claimed it as their own.
-
-Mayor Ubring receives word from [Marines] who came with him that have communicated with HQ that members of [Don Kreig]'s men have been increasingly attacking marine ships.
-
-Populous:
+++Populous:
+    Population: 169
     [Royal Armoror Grix] - Royal Adviser and in charge when King Tri-Helm is away
     Nobleman [Garney] - In charge of real estate and establishments
     Servant [Marta] and [Prescilla]
     
 Migrating from [Augsburg]:
-    Mayor Ubring and daughter Anabel
+    [Mayor Ubring] and daughter Anabel
     -Guarded by a [Marines] captain, officer, 8 privates
     
 Refugees from [Luthadel]    
     -6 skaa women found at a noble house 
     
 -Market Square: Merchants include:  
+    -Local Food Merchant: [Ruvyn]
+        -elk meat - 5c per lb
+        -fish - 5c per lb
+        -vegetables - 5c per lb
 	-Farming Supply for tools and hardware supplies. Run by Lenny, a common man.
 		-pitch forks, scythes, tilling tools, seeds, hammers, nails
 	-Pawn Shop for odd items. Run by the weird Mr. Maej, resembling a hunchback. 
@@ -78,9 +79,15 @@ Refugees from [Luthadel]
 -Temple to [Kadi] (formerly temple of Elysium)
     -Designated as a sanctuary by [Croaker]            
             
+-[Taman]'s Taps       
+    [Mayor Ubring]'s daughter, Anabel works here at a barmaid     
+    -5sp per night per room, includes meal for the day (modest)
+    -3sp for a meal
+    -2sp for common wine or ale            
+            
 -North Dock
     - 1 [Order of Steel] warships are parked here, one has no cannons or control orb
-    -Menagerie: animal vendor at a warehouse, Ghan Bopps (dwarf) a bit smelly, but otherwise very nice, had a wanted poster out for the Fiore Griffin with the [Marines] - 436 Gold
+    -Menagerie: animal vendor at a warehouse, [Ghan Bopps] (dwarf) a bit smelly, but otherwise very nice, had a wanted poster out for the Fiore Griffin with the [Marines] - 436 Gold
             2cp x lb of chicken (1d6) (5 at stall)
             1gp per goat (2 at stall)
             3gp per pig (2 at stall) 
