--- a/data/Mayor Ubring.wiki
+++ b/data/Mayor Ubring.wiki
@@ -1,3 +1,3 @@
 ﻿++ Mayor Ubring
 
-He's a jolly man who enjoys the peaceful life of Augsburg. He has a son who works as a Dockworker, Jordan, and a daughter who works the town's Grocer, Anabel.
+He's a jolly man who enjoys the peaceful life of [Augsburg]. He has a son who works as a Dockworker, Jordan, and a daughter who works the town's Grocer, Anabel.
