--- a/data/Evil Group Notes.wiki
+++ b/data/Evil Group Notes.wiki
@@ -18,14 +18,14 @@ XXXXXXX XXXXXXX
 XXXXXXX XXXXXXX
 XXXXXXX XXXXXXX
 XXXXXXX XXXXXXX
-XX<F>XXX XXX
+XX<F>XXX XXXX
 
 Moon Phases (30 days in a cycle, day 1 is a full moon)
-(18)
+(19)
 
-[Grogar] orders the orcs of [Kaladim] to build boats to attack [Marine HQ] (50 days) XXXXXXXXXX X
+[Grogar] orders the orcs of [Kaladim] to build boats to attack [Marine HQ] (50 days) XXXXXXXXXX XX
 
-[Croaker] commissions a Gold gauntlet worth 500g from [Shirrong Bronzecore] (25 days) XXXXXXXXXX XXXXXXXXXX XXXX
+[Croaker] commissions a Gold gauntlet worth 500g from [Shirrong Bronzecore] (25 days) XXXXXXXXXX XXXXXXXXXX XXXXX
   -afterward Gold Scicle costing 108g (4days)
   
 [Royal Armoror Grix] smelting ore from [Kaladim] (10 lbs copper, 3 lbs silver, 1 lb gold) (5 days) XXXXX (DONE, needs to be collected)  
@@ -1149,4 +1149,10 @@ Teleport back to the cave to the Material Plane
     -in a panic, an earthquake spell is used to destroy 1/2 of the [Ak'anon] gate, now in the bay at a 45% angle
     -[Krieger] sneaks onto the other ship and sets off the other set of cannons
     
-             
+++++Session 66
+    - 8 gnomes on the top of the ship
+      -6 go below deck to find the surviving iksar that fired the cannon
+      
+    The group rests upon the ship as rescue efforts continue through the night  
+      -night shift guards Toros M, Bripip ?, Uridri F, Saxim F
+      
